# CoastlineMonitoring

./: README.md  config.yml  pyproject.toml  requirements.txt  test.ipynb
base/: antarctic_region.dbf  antarctic_region.qix  antarctic_region.shp  antarctic_region.shx
